--- a/html/index.html
+++ b/html/index.html
@@ -58,10 +58,14 @@
                 </a>                
                 <div class="social-links d-flex align-items-center w-25 gap-4">
                     <div class="icon text-center p-1">
-                        <a href="https://github.com/HossamAlsaedi"><i class="fa-brands fa-github" style="color: #63E6BE;" title="GitHib"></i></a>
+                        <a href="https://github.com/HossamAlsaedi" target="_blank">
+                            <i class="fa-brands fa-github" style="color: #63E6BE;" title="GitHib"></i>
+                        </a>
                     </div>
                     <div class="icon text-center p-1">
-                        <a href="https://www.linkedin.com/in/hossam-alsaedi-8177b7296/"><i class="fa-brands fa-linkedin" style="color: #63E6BE;" title="Linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/hossam-alsaedi-8177b7296/" target="_blank">
+                            <i class="fa-brands fa-linkedin" style="color: #63E6BE;" title="Linkedin"></i>
+                        </a>
                     </div>
                 </div>
             </div>
