--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
                 and plan to further enhance my knowledge with TypeScript, Sass, and other web development technologies.
             </div>
             <div class="contact-info my-3">
-                <a href="mailto:hossamsalsaedi@gmail.com?subject=Hello&body=I'd%20like%20to%20know%20more%20about..." class="text-decoration-none">
+                <a href="mailto:hossamsalsaedi@gmail.com" class="text-decoration-none">
                     <div class="email my-3 p-2 rounded-2">
                         <span class="px-2">Contact via email</span>
                         <img src="../Image/Send.svg" alt="Send Icon">
@@ -135,8 +135,7 @@
                                 <li class="col-xl-6">Product Management</li>
                                 <li class="col-xl-6">Account Management</li>
                                 <li class="col-xl-6">Cart & Checkout</li>
-                                <li class="col-xl-6">Currency Sync</li>
-                                <li class="col-xl-6">Forgot Password</li>
+                                <li class="col-xl-6">Currency API</li>
                             </ul>
                         </div>
                         <div class="card-footer text-end h-10">
