--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@
                 Web Developer - Front End
             </div>
             <div class="about w-50 mt-4 fw-normal fs-6">
-                I started learning front-end web development in April 2023 and currently have skills in HTML,
+                I began learning front-end web development in April 2023, and I currently possess skills in HTML,
                 CSS (with Bootstrap), and JavaScript. I'm now focusing on Vue.js
                 and plan to further enhance my knowledge with TypeScript, Sass, and other web development technologies.
             </div>
