--- a/html/index.html
+++ b/html/index.html
@@ -101,6 +101,7 @@
             <div class="skill col-lg-2 col-md-6 col-sm-12 text-center">
                 <i class="fa-brands fa-vuejs" style="color: #42b883;" title="Vue.js"></i>
                 <span>Vue.js</span>
+                <span class="note text-black">(Currently learning)</span>
             </div>
         </div>
         
