--- a/html/index.html
+++ b/html/index.html
@@ -10,10 +10,12 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <!------------ layout section ----------->
     <div class="layout-box overflow-hidden position-absolute w-100 top-0">
         <div class="layout position-relative"></div>
     </div>
 
+    <!------------ Navigation section ----------->
     <nav class="container navbar navbar-expand-lg my-3 sticky-top">
         <div class="container-fluid">
             <h2 class="navbar-brand">Portfolio</h2>
@@ -36,6 +38,7 @@
         </div>
     </nav>
 
+    <!------------ Information and contact info section ----------->
     <div class="information container-md d-flex align-items-center h-50 my-5 pb-5" id="information">
         <div class="info container-md h-auto w-auto my-5">
             <h1 class="name fw-bolder">
@@ -72,6 +75,7 @@
         </div>
     </div>
 
+    <!------------ Skills section ----------->
     <div class="skills container d-flex position-relative justify-content-center flex-column align-items-center my-5 py-5" id="skills">
         <h3 class="section-title text-center my-5">
             Skills
@@ -107,6 +111,7 @@
         
     </div>
 
+    <!------------ Portfolio section ----------->
     <div class="Portfolio container position-relative my-5" id="portfolio">
         <h3 class="section-title text-center my-5">
             Portfolio
@@ -210,6 +215,7 @@
         
     </div>
 
+    <!------------ Footer section ----------->
     <footer class="w-100 h-auto text-center mt-5 py-2">
         <span class="py-2 fs-6">
             This page was made with
