adding github skill

--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,7 @@
                 <div class="social-links d-flex align-items-center w-25 gap-4">
                     <div class="icon text-center p-1">
                         <a href="https://github.com/HossamAlsaedi" target="_blank">
-                            <i class="fa-brands fa-github" style="color: #63E6BE;" title="GitHib"></i>
+                            <i class="fa-brands fa-github" style="color: #63E6BE;" title="Github"></i>
                         </a>
                     </div>
                     <div class="icon text-center p-1">
@@ -103,6 +103,10 @@
                 <span>Responsive design</span>
             </div>
             <div class="skill col-lg-2 col-md-6 col-sm-12 text-center">
+                <i class="fa-brands fa-github" title="Github"></i>
+                <span>Github & Git Bash</span>
+            </div>
+            <div class="skill col-lg-2 col-md-6 col-sm-12 text-center">
                 <i class="fa-brands fa-vuejs" style="color: #42b883;" title="Vue.js"></i>
                 <span>Vue.js</span>
                 <span class="note text-black">(Currently learning)</span>
@@ -140,7 +144,7 @@
                                 <li class="col-xl-6">Responsive design</li>
                                 <li class="col-xl-6">Product Management</li>
                                 <li class="col-xl-6">Account Management</li>
-                                <li class="col-xl-6">Cart & Checkout</li>
+                                <li class="col-xl-6">Cart Management</li>
                                 <li class="col-xl-6">Currency API</li>
                             </ul>
                         </div>
