--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="about w-50 mt-4 fw-normal fs-6">
                 I began learning front-end web development in April 2023, and I currently possess skills in HTML,
-                CSS (with Bootstrap), and JavaScript. I'm now focusing on Vue.js
+                CSS (with Bootstrap), and JavaScript. Currently focusing on Vue.js
                 and plan to further enhance my knowledge with TypeScript, Sass, and other web development technologies.
             </div>
             <div class="contact-info my-3">
@@ -122,12 +122,54 @@
         </h3>
         
         <div class="container">
-            <div class="row justify-content-center my-5 my-md-2">
-                <div class="project col-sm-8 col-md-6 col-lg-4  d-flex justify-content-center">
+            <!-------------- First Row ------------->
+            <div class="row justify-content-center my-5 my-md-2 gap-5 gap-md-0">
+                <!---------- QnA application ----------->
+                <div class="project col-sm-8 col-md-6 col-lg-4 position-relative mb-5">
                     <div class="card h-100 shadow">
+                        <span class="position-absolute top-0 left-0 z-3 text-bg-warning p-1">On Progress</span>
                         <div class="card-img-top h-40">
+                            <a href="https://hossamalsaedi.github.io/QnA_Game/#/" target="_blank">
+                            <img src="../Image/QnA.png" alt="" style="width: 100%; height: 100%;">
+                            </a>
+                        </div>
+                        <div class="card-body h-50">
+                            <div class="card-title d-flex justify-content-between mb-0">
+                                <h4 class="fs-4 fw-bold">Q&A Game</h4> 
+                                <ul class="d-flex list-unstyled">
+                                    <li><i class="fa-brands fa-html5" style="color: #e34f26;" title="HTML"></i></li>
+                                    <li><i class="fa-brands fa-css3-alt" style="color: #002561;" title="CSS"></i></li>
+                                    <li><i class="fa-brands fa-js" style="color: #FFD43B;" title="JavaScript"></i></li>
+                                    <i class="fa-brands fa-vuejs" style="color: #42b883;" title="Vue.js"></i>
+                                    <i class="fa-brands fa-bootstrap" style="color: #712cf9;" title="Bootstrap"></i>
+                                </ul>
+                            </div>
+                            <h5>Features:</h5>
+                            <ul class="Features d-xl-flex flex-wrap p-xl-1">
+                                <li class="col-xl-6">Responsive design</li>
+                                <li class="col-xl-6">Team Management</li>
+                                <li class="col-xl-6">Team Abilities</li>
+                                <li class="col-xl-6">Multiple categories</li>
+                                <li class="col-xl-6">Save Game</li>
+                                <li class="col-xl-6">Points system</li>
+                                <li class="col-xl-6">Animations</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer text-end h-10">
+                            <span class="code mx-4"><a href="https://github.com/HossamAlsaedi/QnA_Game" target="_blank">Code</a></span>
+                            <span class="page"><a href="https://hossamalsaedi.github.io/QnA_Game/#/" target="_blank">Page</a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-------------- Second Row ------------->
+            <div class="row justify-content-center my-5 gap-5 gap-md-0">
+                <!---------- shop application ----------->
+                <div class="project col-sm-8 col-md-6 col-lg-4 ">
+                    <div class="card h-100 shadow">
+                        <div class="card-img-top h-50">
                             <a href="https://Hossamalsaedi.github.io/Shop-Application/html/" target="_blank">
-                            <img src="../Image/shop-site.png" alt="" style="width: 100%; height: 100%;">
+                            <img src="../Image/shop.png" alt="" style="width: 100%; height: 100%;">
                             </a>
                         </div>
                         <div class="card-body h-50">
@@ -154,8 +196,43 @@
                         </div>
                     </div>
                 </div>
+                <!---------- PDF Editor ----------->
+                <div class="project col-sm-8 col-md-6 col-lg-4">
+                    <div class="card h-100 shadow">
+                        <div class="card-img-top h-50">
+                            <a href="https://hossamalsaedi.github.io/PDF-Editor/" target="_blank">
+                            <img src="../Image/pdf-editor.jpg" alt="" style="width: 100%; height: 100%;">
+                            </a>
+                        </div>
+                        <div class="card-body h-50">
+                            <div class="card-title d-flex justify-content-between mb-0">
+                                <h4 class="fs-4 fw-bold">PDF Editor</h4> 
+                                <ul class="d-flex list-unstyled">
+                                    <li><i class="fa-brands fa-html5" style="color: #e34f26;" title="HTML"></i></li>
+                                    <li><i class="fa-brands fa-css3-alt" style="color: #002561;" title="CSS"></i></li>
+                                    <li><i class="fa-brands fa-js" style="color: #FFD43B;" title="JavaScript"></i></li>
+                                </ul>
+                            </div>
+                            <h5>Features:</h5>
+                            <ul class="Features d-xl-flex flex-wrap p-xl-1">
+                                <li class="col-xl-6">Responsive design</li>
+                                <li class="col-xl-6">Merging pages</li>
+                                <li class="col-xl-6">Merging files</li>
+                                <li class="col-xl-6">Convert image to PDF</li>
+                                <li class="col-xl-6">Rearrange pages</li>
+                                <li class="col-xl-6">Split PDF pages</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer text-end h-10">
+                            <span class="code mx-4"><a href="https://github.com/HossamAlsaedi/PDF-Editor" target="_blank">Code</a></span>
+                            <span class="page"><a href="https://hossamalsaedi.github.io/PDF-Editor/" target="_blank">Page</a></span>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <!-------------- Third Row ------------->
             <div class="row justify-content-center my-5 gap-5 gap-md-0">
+                <!---------- Animation Page ----------->
                 <div class="project col-sm-8 col-md-6 col-lg-4">
                     <div class="card h-100 shadow">
                         <div class="card-img-top h-40">
@@ -185,6 +262,7 @@
                         </div>
                     </div>
                 </div>
+                <!---------- First Bootstrap page ----------->
                 <div class="project col-sm-8 col-md-6 col-lg-4">
                     <div class="card h-100 shadow">
                         <div class="card-img-top h-40 w-100">
