--- a/html/index.html
+++ b/html/index.html
@@ -127,7 +127,7 @@
                 <!---------- QnA application ----------->
                 <div class="project col-sm-8 col-md-6 col-lg-4 position-relative mb-5">
                     <div class="card h-100 shadow">
-                        <span class="position-absolute top-0 left-0 z-3 text-bg-warning p-1">On Progress</span>
+                        <span class="position-absolute top-0 left-0 z-3 text-bg-warning p-1">In Progress</span>
                         <div class="card-img-top h-40">
                             <a href="https://hossamalsaedi.github.io/QnA_Game/#/" target="_blank">
                             <img src="../Image/QnA.png" alt="" style="width: 100%; height: 100%;">
