update certificates section

--- a/html/index.html
+++ b/html/index.html
@@ -156,26 +156,73 @@
                     <div class="skills-grid">
                         <div class="skill-card">
                             <i class="fa-solid fa-certificate" style="color: #4285f4;"></i>
-                            <span>Google IT Support ✅</span>
-                                  <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/8UJ2Q0NMK5UI" target="_blank" class="verify-badge">
-                                    <i class="fas fa-shield-check"></i> Verified
-                                  </a>
+                            <div class="cert-name">Google IT Support Professional</div>
+                            <div class="cert-status completed">Completed</div>
+                            <div class="cert-date">Earned: Jul 2025</div>
+                            <div class="cert-buttons">
+                                <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/8UJ2Q0NMK5UI" target="_blank" class="cert-btn verify">
+                                    <i class="fas fa-shield-check"></i> Verify
+                                </a>
+                                <a href="https://www.coursera.org/professional-certificates/google-it-support" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
                         </div>
+
                         <div class="skill-card">
                             <i class="fa-solid fa-book-open-reader" style="color: #ff6b6b;"></i>
-                            <span>CompTIA A+ (Studying)</span>
+                            <div class="cert-name">CompTIA A+ Core 1 & 2</div>
+                            <div class="cert-status studying">Studying</div>
+                            <div class="cert-buttons">
+                                <button class="cert-btn verify disabled">
+                                    <i class="fas fa-clock"></i> Pending
+                                </button>
+                                <a href="https://www.comptia.org/en-us/certifications/a/core-1-and-2-v15/#overview" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
                         </div>
+
                         <div class="skill-card">
                             <i class="fa-solid fa-shield-halved" style="color: #00d4aa;"></i>
-                            <span>MD-102 (Planned)</span>
+                            <div class="cert-name">Microsoft MD-102</div>
+                            <div class="cert-status planned">Planned</div>
+                            <div class="cert-buttons">
+                                <button class="cert-btn verify disabled">
+                                    <i class="fas fa-calendar-plus"></i> Planned
+                                </button>
+                                <a href="https://docs.microsoft.com/en-us/learn/certifications/exams/md-102" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
                         </div>
+
                         <div class="skill-card">
                             <i class="fa-solid fa-layer-group" style="color: #845ec2;"></i>
-                            <span>ITIL 4 Foundation (Planned)</span>
+                            <div class="cert-name">ITIL 4 Foundation</div>
+                            <div class="cert-status planned">Planned</div>
+                            <div class="cert-buttons">
+                                <button class="cert-btn verify disabled">
+                                    <i class="fas fa-calendar-plus"></i> Planned
+                                </button>
+                                <a href="https://www.axelos.com/certifications/itil-service-management/itil-4-foundation" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
                         </div>
+
                         <div class="skill-card">
                             <i class="fa-solid fa-file-word" style="color: #2B579A;"></i>
-                            <span>MOS Associate (Planned)</span>
+                            <div class="cert-name">Microsoft Office Specialist Associate</div>
+                            <div class="cert-status planned">Planned</div>
+                            <div class="cert-buttons">
+                                <button class="cert-btn verify disabled">
+                                    <i class="fas fa-calendar-plus"></i> Planned
+                                </button>
+                                <a href="https://learn.microsoft.com/en-us/credentials/certifications/microsoft-office-specialist-associate-2019/" target="_blank" class="cert-btn about">
+                                    <i class="fas fa-info-circle"></i> About
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
