--- a/html/index.html
+++ b/html/index.html
@@ -230,7 +230,7 @@
         </div>
     </section>
 
-    <!-- Portfolio Section -->
+<!-- Portfolio Section -->
     <section class="section" id="portfolio">
         <div class="container">
             <h2 class="section-title">My Projects</h2>
@@ -239,7 +239,8 @@
                 <!-- QR Reader -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/QR-reader.jpg" alt="">
+                        <img src="/Image/QR-reader.jpg" alt="QR Reader Project" 
+                        onerror="this.src='https:\/\/raw.githubusercontent.com\/HossamAlsaedi\/Portfolio\/main\/Image\/QR-reader.jpg'">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">QR Reader</h3>
@@ -250,7 +251,7 @@
                         </div>
                         <p class="project-description">
                             <strong>Why I built this:</strong> 
-                            Most QR code readers rely on a camera or online tools, which isn’t always practical or secure.
+                            Most QR code readers rely on a camera or online tools, which isn't always practical or secure.
                             I needed a quick way to scan QR codes from images on my desktop — so I built a private, lightweight tool that works offline without uploading anything.
                         </p>
                         <div class="project-features">
@@ -274,7 +275,8 @@
                 <!-- PDF Editor -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/pdf-editor.jpg" alt="">
+                        <img src="/Image/pdf-editor.jpg" alt="PDF Editor Project"
+                        onerror="this.src='https:\/\/raw.githubusercontent.com\/HossamAlsaedi\/Portfolio\/main\/Image\/pdf-editor.jpg'">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">PDF Editor</h3>
@@ -312,7 +314,8 @@
                 <div class="project-card">
                     <div class="project-image">
                         <span class="status-badge">In Progress</span>
-                        <img src="/Image/QnA.png" alt="">
+                        <img src="/Image/QnA.png" alt="Q&A Game Project"
+                        onerror="this.src='https:\/\/raw.githubusercontent.com\/HossamAlsaedi\/Portfolio\/main\/Image\/QnA.png'">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Q&A Game</h3>
@@ -352,7 +355,8 @@
                 <!-- Shop Application -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/shop.png" alt="">
+                        <img src="/Image/shop.png" alt="Shop Application Project"
+                        onerror="this.src='https:\/\/raw.githubusercontent.com\/HossamAlsaedi\/Portfolio\/main\/Image\/shop.png'">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Shop Application</h3>
@@ -388,7 +392,8 @@
                 <!-- Animation Page -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/Animation-site.png" alt="">
+                        <img src="/Image/Animation-site.png" alt="Animation Project"
+                        onerror="this.src='https:\/\/raw.githubusercontent.com\/HossamAlsaedi\/Portfolio\/main\/Image\/Animation-site.png'">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Animation</h3>
@@ -423,7 +428,8 @@
                 <!-- Bootstrap Template -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/Image/Bootstrap-site.png" alt="">
+                        <img src="/Image/Bootstrap-site.png" alt="Bootstrap Template Project"
+                        onerror="this.src='https:\/\/raw.githubusercontent.com\/HossamAlsaedi\/Portfolio\/main\/Image\/Bootstrap-site.png'">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Bootstrap Template</h3>
