--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
                         <h1 class="hero-title">Hossam Alsaedi</h1>
                         <p class="hero-subtitle">IT Support & Web Developer</p>
                         <p class="hero-description">
-                            I'm a passionate tech enthusiast with hands-on experience in web development and a growing skill set in IT support, Windows administration, and automation. Currently working on certifications like CompTIA A+, MD-102, and ITIL4 to strengthen my position in the IT field. My goal is to combine practical IT support skills with development tools to solve real-world problems.
+                            I'm a passionate tech enthusiast with hands-on experience in web development and a growing skill set in IT support, Windows administration, and automation. Currently working on certifications like CompTIA A+ and ITIL4 to strengthen my position in the IT field. My goal is to combine practical IT support skills with development tools to solve real-world problems.
                         </p>
                         <div class="contact-buttons">
                             <a href="mailto:hossamsalsaedi@gmail.com" class="btn-gradient align-content-center">
@@ -171,27 +171,13 @@
 
                         <div class="skill-card">
                             <i class="fa-solid fa-book-open-reader" style="color: #ff6b6b;"></i>
-                            <div class="cert-name">CompTIA A+ Core 1 & 2</div>
+                            <div class="cert-name">CompTIA A+ Core 2</div>
                             <div class="cert-status studying">Studying</div>
                             <div class="cert-buttons">
                                 <button class="cert-btn verify disabled">
                                     <i class="fas fa-clock"></i> Pending
                                 </button>
                                 <a href="https://www.comptia.org/en-us/certifications/a/core-1-and-2-v15/#overview" target="_blank" class="cert-btn about">
-                                    <i class="fas fa-info-circle"></i> About
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="skill-card">
-                            <i class="fa-solid fa-shield-halved" style="color: #00d4aa;"></i>
-                            <div class="cert-name">Microsoft MD-102</div>
-                            <div class="cert-status planned">Planned</div>
-                            <div class="cert-buttons">
-                                <button class="cert-btn verify disabled">
-                                    <i class="fas fa-calendar-plus"></i> Planned
-                                </button>
-                                <a href="https://docs.microsoft.com/en-us/learn/certifications/exams/md-102" target="_blank" class="cert-btn about">
                                     <i class="fas fa-info-circle"></i> About
                                 </a>
                             </div>
